Update Medical Cost Personal Datasets - Kaggle.ipynb

--- a/Medical Cost Personal Datasets - Kaggle.ipynb
+++ b/Medical Cost Personal Datasets - Kaggle.ipynb
@@ -17,6 +17,8 @@
     "\n",
     "https://www.kaggle.com/datasets/mirichoi0218/insurance?resource=download&sort=votes\n",
     "\n",
+    "This project is used to demonstrate REGRESSION METHODS\n"
+    "\n",
     "**Objective**\n",
     "\n",
     "To accurately predict insurance costs for participants based on personal attributes\n",
@@ -3219,7 +3221,7 @@
    "id": "fab9b926",
    "metadata": {},
    "source": [
-    "### 9. Actionable Insights & Recommendations"
+    "### 10. Actionable Insights & Recommendations"
    ]
   },
   {
